# NES

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_run.bat  build_and_run_debug.bat  build_and_run_release.bat  cmake_using_conan.bat  conanfile.txt  vcpkg-configuration.json  vcpkg.json
doc/: nes_overview.drawio
src/: APU2A03.cpp  APU2A03.h  Cartridge.cpp  Cartridge.h  GUI.cpp  GUI.h  InputManager.cpp  InputManager.h  Mapper.cpp  Mapper.h  NES.cpp  NES.h  Renderer.cpp  Renderer.h  SoundEngine.cpp  SoundEngine.h  Window.cpp  Window.h  cpu6502.cpp  cpu6502.h  main.cpp  nes.cpp  nes.h  ppu2C02.cpp  ppu2C02.h  stdafx.h
src/dontcompile/: cpu6502.cpp  cpu6502.h
src/interface/fonts/: lato.cpp
src/mappers/: Mapper_000.cpp  Mapper_000.h
